# physics-521-classical-mechanics

./: ..SphinxAutoBuildServer.term-0.term.init  .cookiecutter.yaml  .coveragerc  .gitignore  .gitlab-ci.yml  .hgtags  .init-file.bash  .myenv  .readthedocs.yaml  InstructorNotes.md  Makefile  Notes.md  README.md  anaconda-project.yaml  environment.yaml  pyproject.toml
.tools/: requirements.hg.txt  requirements.pdm.txt
Docs/: Assignments.md  ClassLog.md  ClassNotes.md  CoCalc.md  Demonstration.md  Notes.md  OtherNotes.md  Reading.md  References.md  Syllabus.md  conf.py  index.md  local.bib  macros.bib  references.bib
Docs/Assignments/: 00_Forced_Oscillations.md  01_Newtonian_Mechanics.md  02_Accelerated_Frames.md  03_Lagrangian_Dynamics.md  04_Small_Oscillations.md  05_Rotations.md  06_HamiltonianDynamics.md  Assignment-0.md
Docs/ClassNotes/: BVP.md  Droplets.md  Drums.md  DuffingOscillator.md  Feigenvalue.md  FloquetTheory.md  FunctionalDerivatives.md  GreensFunctionsAndFFT.md  HamiltonianDynamics.md  HamiltonianDynamicsOverflow.md  JacobiEllipticFunctions.md  KapitzaPendulum.md  LagrangeMultipliers.md  Lagrangians.md  NortonsDome.md  PerturbationTheory.md  PerturbationTheoryI.md  Restricted3Body.md  RigidBodies.md  SmallOscillations.md  Strings.md  ThePendulum.md  Thermodynamics.md  media
Docs/ClassNotes/Arnold/: Chapter9.md
Docs/OtherNotes/: ChaosFractals.md  Manim.md
Docs/Prerequisites/: LinearAlgebra.md
Docs/Quantum/: Gravity.md  LinearResponse.md
Docs/_static/: math_defs.tex
Docs/_templates/: layout.html
phys_521_2022/: assignment1.py
src/phys_521/: __init__.py
src/phys_521_2022/: __init__.py
tests/: test_assignment_0.py  test_example.py  test_official_assignment_0.py
